cris/style.css
/* Positioning and styling main body elements */
body {
  background: rgba(255, 255, 255, 1);
  padding-left: 175px;
}
main {
  margin-bottom: 120px;
  margin-top: 60px;
  overflow-y: auto;
  position: relative;
  z-index: 1;
}
h1, h2, h3 {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-weight: bold;
}
h1 {
  font-size: 20px;
  margin: 10px 5px;
}
h2 {
  font-size: 16px;
  margin: 10px 5px;
}
h3 {
  font-size: 14px;
  margin: 10px 25px;
  text-decoration: underline;
}
p {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  margin: 10px 25px;
  text-align: justify;
  width: fit-content;
}
ul {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  margin: 0px 50px 0px 5px;
  text-align: justify;
  width: fit-content;
}

/* Section separators and styling */
hr {
  border: 0;
  height: 2px;
  background: linear-gradient(to right, rgba(100, 100, 100, 0.25), rgba(255, 255, 255, 1.0));
  margin: 10px 5px;
}
.separator-container {
  text-align: center;
  margin: 5px auto;
}
.separator-dots {
  background: linear-gradient(to right, rgba(255, 255, 255, 0.50), rgba(0, 0, 0, 1.0), rgba(255, 255, 255, 0.50));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  display: inline-block;
  font-size: 14px;
  letter-spacing: 12px;
}
.separator-line {
  border-top: 2px dotted rgba(0, 0, 0, 0.50);
  margin: 0px auto;
  width: 35%;
}
.section-color {
  background: rgba(248, 248, 255, 0.05);
  border: 0.5px solid rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.125);
  padding: 10px;
  position: relative;
  max-width: 95%;
}
.container {
  display: flex;
  text-align: center;
  justify-content: center;
}

/* Linked images and sources */
.link-hover a:hover, .link-hover p:hover {
  text-decoration: underline;
}
.linked-image {
  display: block;
  margin: 20px auto;
  width: 1440px;
  height: auto;
  border: 2px solid #ddd;
  border-radius: 8px;
  transition: transform 0.3s ease;
}

/* Tables */
table {
  border-collapse: collapse;
  width: fit-content;
}
th, td {
  border: 1px solid #ddd;
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  padding: 5px;
  text-align: left;
}
th {
  background-color: #f4f4f4;
}
th:hover {
  background-color: rgba(20, 20, 20, 0.50);
}
.table-container {
    width: 80%;
    margin: 0 auto;
}
input[type="text"] {
    width: 25%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid rgba(20, 20, 20, 1.0);
    border-radius: 4px;
}

/* Special formatting for publications - long lines */
.instructions li {
  list-style-position: outside;
  list-style-type: lower-roman;
  margin-left: 25px;
}
.instructions p {
  margin-left: 15px;
}
.publications a {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  justify-content: left;
  text-decoration: underline;
}
.publications a:hover {
  color: rgba(0, 0, 255, 1);
}
.publications li {
  list-style-position: outside;
  list-style-type: number;
  margin-bottom: 10px;
  max-width: 90%;
  width: fit-content;
}

/* Create a grid system for items */
.grid-container {
  background: rgba(174, 214, 241, 0.20);
  border: 0.5px solid rgba(0, 0, 0, 1);
  border-radius: 5px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(3, 1fr);
  margin: 10px 10px;
  padding: 10px;
  width: fit-content;
}
.grid-item {
  background: rgba(255, 255, 255, 0.75);
  border: 0.5px solid rgba(0, 0, 0, .5);
  border-radius: 5px;
  color: black;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  font-family: Tahoma, sans-serif;
  font-size: 15px;
  font-weight: bold;
  padding: 25px 10px;
  text-align: center;
  text-decoration: none;
}
.grid-item:hover {
  border-color: rgba(255, 255, 0, 0.25);
}
.grid-item:hover a:hover, .grid-hover p:hover {
  text-decoration: underline;
}

/* Code examples */
code {
  color: black;
  background: rgba(255, 248, 220, 0.25);
  border: 0.5px solid rgba(0, 0, 0, 0.50);
  border-radius: 3px;
  font-family: Courier New;
  font-size: 14px;
  font-weight: normal;
  margin: 10px 20px;
  max-width: 80%;
  overflow-x: auto;
  padding: 10px;
  text-align: center;
  text-decoration: none;  
  white-space: nowrap;
  width: fit-content;
  z-index: 10;
}
code.example {
  background: rgba(144, 238, 144, 0.25);
}
.code-block {
  text-align: left;
  width: fit-content;
}

/* Definition lists for vocabulary */
dl {
  background: rgba(255, 248, 220, 0.25);
  border-radius: 5px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  max-width: 75%;
  padding: 20px;
  width: fit-content;
}
dt {
  color: rgba(10, 10, 10, 1);
  font-weight: bold;
  text-decoration: underline;
}
dt::after {
  content: ":";
}
dd {
  margin: 5px 50px 5px 15px;
}
.dl-container {
  display: flex;
  justify-content: left;
  margin-left: 75px;
}

/* Header section */
header {
  background: linear-gradient(to right, rgba(22, 83, 126, 0.95), rgba(22, 83, 126, 0.50));
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  color: rgba(255, 255, 255, 1);
  font-family: Tahoma, sans-serif;
  height: 50px;
  left: 0;
  position: fixed;
  text-align: left;
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.50);
  top: 0;
  width: 100%;
  z-index: 100;
}
.title {
  font-size: 36px;
  font-weight: bold;
  padding-left: 25px;
  position: relative;
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.70);
  white-space: nowrap;
}

/* Footer section */
footer {
  background: linear-gradient(to bottom, rgba(0, 0 ,0, 1), rgba(0, 0, 0, 0.65));
  bottom: 0;
  color: rgba(255, 255, 255, 1);
  font-family: Tahoma, sans-serif;
  height: 75px;
  left: 0;
  padding: 2px 0px;
  position: fixed;
  width: 100%;
  z-index: 100;
}
.footer-background {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.50);
  z-index: -1;
}
.footer-block {
  display: flex;
  font-size: 14px;
  justify-content: space-between;
  margin-top: 5px;
  padding: 0px 125px;
}
.footer-item a, .footer-item h3 {
  align-items: flex-start;
  color: rgba(255, 255, 255, 1);
  display: flex;
  flex: 1;
  flex-direction: column;
  margin: 0px 10px;
  text-align: left;
  text-decoration: none;
}
.footer-item p {
  color: rgba(255, 255, 255, 1);
  margin: 0px;
  text-align: left;
  white-space: nowrap;
}

/* Styling the side navigation */
.sidenav {
  background: rgba(227, 218, 201, 0.10);
  border: 0.5px solid rgba(0, 0, 0, 1);
  border-radius: 10px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  height: flex;
  left: 15px;
  position: fixed;
  text-align: left;
  top: 70px;
  width: 135px;
}
.nav-section a {
  border-bottom: 0.5px dotted rgba(0, 0, 0, 0.15);
  color: rgba(0, 0, 0, 1);
  display: block;
  padding: 5px 5px;
  text-decoration: none;
  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.50);
}
.nav-section-header {
  border-bottom: 0.3px solid rgba(0, 0, 0, 0.35);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-top: 5px solid rgba(10, 10, 10, 1);
  color: rgba(10, 10, 10, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: bold;
  padding: 4px 5px;
  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.50);
}
.nav-section-header a {
  font-size: 16px;
  font-weight: bold;
  text-decoration: none;
}

